<resources>
    <string name="app_name">easyChef</string>
    <string name="add_new_meal">Add New Meal</string>
    <string name="meal_name">Meal Name</string>
    <string name="ingredients_1">Ingredients 1</string>
    <string name="ingredients_2">Ingredients 2</string>
    <string name="starter">Starter</string>
    <string name="main">Main</string>
    <string name="desert">Dessert</string>
    <string name="button">Button</string>
    <string name="submitnewmeal">submitNewMeal</string>
    <string name="success_meal_add">Meal Successfully Added!</string>
    <string name="fail_meal_added">Please fill in all fields required</string>
    <string name="welcome_to_easychef_your_favourite_cooking_companion_start_by_adding_your_ingredients_then_click_next">Welcome to easyChef, your favourite cooking companion. Start by adding your ingredients and choosing your meal types, then click Next!</string>
    <string name="dessert">Dessert</string>
    <string name="add_new_ingredient">Add New Ingredient</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="submit_new_meal">Submit New Meal</string>
    <string name="ingredient">Ingredient</string>
    <string name="quantity">Quantity</string>
    <string name="share">Share</string>
    <string name="measurement">Measurement : </string>
    <string name="user_manual_text">By now hopefully you have entered some ingredients for you to use. If not, no worries, this screen will outline everything you need to know in order to make the most of easyChef™\nWelcome Page - This is the first page you visited earlier. You enter the ingredients you have at your disposal, their quantity and the measurements of that quantity. In addition, you can check the type of meals you are looking for. Once finished click the next button to complete the list.\nMain Page - Displays the meals within the database in alphabetical order. The ingredients and quantity of each meal is displayed in different colors, black if the user has none of that ingredient, orange if the user has some of the ingredient and blue if the user has all of the ingredient. The user is able to use the search bar to filter the listview for a specific meal, add/edit/delete a meal from the list as well as add a meal from the list to their trolley.\nIngredients Page - Allows you to add/edit/delete the ingredients in your ingredients list as well as choose what meals you want to view and reset the list all together.\nTrolley Page - </string>
    <string name="timeText">What time do you usually eat?</string>

    <string-array name="spinner_options">
        <item name="None"></item>
        <item name="Grams">g</item>
        <item name="Kilograms">kg</item>
        <item name="Milliliters">ml</item>
        <item name="Litres">l</item>
        <item name="Teaspoons">tsp</item>
        <item name="Tablespoons">tbsp</item>
        <item name="Pounds">lb</item>
        <item name="Ounces">oz</item>
        <item name="Cups">Cups</item>
    </string-array>


    <string-array name="spinner_hours">
        <item name="00">00</item>
        <item name="01">01</item>
        <item name="02">02</item>
        <item name="03">03</item>
        <item name="04">04</item>
        <item name="05">05</item>
        <item name="06">06</item>
        <item name="07">07</item>
        <item name="08">08</item>
        <item name="09">09</item>
        <item name="10">10</item>
        <item name="11">11</item>
        <item name="12">12</item>
        <item name="13">13</item>
        <item name="14">14</item>
        <item name="15">15</item>
        <item name="16">16</item>
        <item name="17">17</item>
        <item name="18">18</item>
        <item name="19">19</item>
        <item name="20">20</item>
        <item name="21">21</item>
        <item name="22">22</item>
        <item name="23">23</item>
    </string-array>

    <string-array name="spinner_minutes">
        <item name="00">00</item>
        <item name="01">01</item>
        <item name="02">02</item>
        <item name="03">03</item>
        <item name="04">04</item>
        <item name="05">05</item>
        <item name="06">06</item>
        <item name="07">07</item>
        <item name="08">08</item>
        <item name="09">09</item>
        <item name="10">10</item>
        <item name="11">11</item>
        <item name="12">12</item>
        <item name="13">13</item>
        <item name="14">14</item>
        <item name="15">15</item>
        <item name="16">16</item>
        <item name="17">17</item>
        <item name="18">18</item>
        <item name="19">19</item>
        <item name="20">20</item>
        <item name="21">21</item>
        <item name="22">22</item>
        <item name="23">23</item>
        <item name="24">24</item>
        <item name="25">25</item>
        <item name="26">26</item>
        <item name="27">27</item>
        <item name="28">28</item>
        <item name="29">29</item>
        <item name="30">30</item>
        <item name="31">31</item>
        <item name="32">32</item>
        <item name="33">33</item>
        <item name="34">34</item>
        <item name="35">35</item>
        <item name="36">36</item>
        <item name="37">37</item>
        <item name="38">38</item>
        <item name="39">39</item>
        <item name="40">40</item>
        <item name="41">41</item>
        <item name="42">42</item>
        <item name="43">43</item>
        <item name="44">44</item>
        <item name="45">45</item>
        <item name="46">46</item>
        <item name="47">47</item>
        <item name="48">48</item>
        <item name="49">49</item>
        <item name="50">50</item>
        <item name="51">51</item>
        <item name="52">52</item>
        <item name="53">53</item>
        <item name="54">54</item>
        <item name="55">55</item>
        <item name="56">56</item>
        <item name="57">57</item>
        <item name="58">58</item>
        <item name="59">59</item>
    </string-array>
</resources>
