<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/add_new_meal" />

    <EditText
        android:id="@+id/mealName"
        android:paddingTop="10dp"
        android:gravity="center|top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textStyle="bold"
        android:hint="@string/meal_name" />

    <EditText
        android:id="@+id/firstIngredient"
        android:paddingTop="10dp"
        android:gravity="center|top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textSize="15sp"
        android:textStyle="bold"
        android:hint="Ingredients" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/Starter"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/starter"/>

            <RadioButton
                android:id="@+id/Main"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/main" />

            <RadioButton
                android:id="@+id/Desert"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/dessert" />
        </RadioGroup>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/darker_gray"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:text="The ingredient(s) needs to be entered in the format: \n One:100g,Two:50ml"/>
    <Button
        android:id="@+id/submitNewMeal"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:text="Submit New Meal" />
</LinearLayout>