<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/layoutContainer"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#bfbfbf"
        android:gravity="center">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#bfbfbf"
            android:gravity="center">
            <Space
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.5"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="100sp"
                android:layout_weight="1"
                app:srcCompat="@drawable/easychef"
                android:padding="5sp"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/welcome_page_button"
                android:layout_width="0dp"
                android:layout_height="75sp"
                android:layout_weight="1"
                android:text="NEXT>>>"
                android:textStyle="bold"
                android:textSize="15sp"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.5"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#bfbfbf"
        android:gravity="bottom">
        <TextView
            android:id="@+id/intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"
            android:ems="100"
            android:gravity="center"
            android:text="@string/welcome_to_easychef_your_favourite_cooking_companion_start_by_adding_your_ingredients_then_click_next"
            android:textColor="#000000"
            android:textSize="16sp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#dfdfdf">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:gravity="center">
                <CheckBox
                    android:id="@+id/checkBoxStarter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/starter"
                    android:paddingRight="10dp"
                    android:onClick="selectItem"/>
                <CheckBox
                    android:id="@+id/checkBoxMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/main"
                    android:paddingRight="10dp"
                    android:onClick="selectItem"/>
                <CheckBox
                    android:id="@+id/checkBoxDesert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/dessert"
                    android:onClick="selectItem"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <EditText
                    android:id="@+id/ingredientName"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textStyle="bold"
                    android:hint="@string/ingredient" />
                <EditText
                    android:id="@+id/Quantity"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textStyle="bold"
                    android:hint="@string/quantity" />
                <Spinner
                    android:id="@+id/Measurements"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/submitNewIngredient"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:text="Add Ingredient"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/textviewChanger"
        android:layout_below="@+id/linearLayout2" >
    </LinearLayout>

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:layout_weight="0.6"
        android:background="#eaeaea">
        <ListView
            android:id="@+id/IngredientsList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:background="#ffffff">
        </ListView>

    </LinearLayout>
</LinearLayout>