<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/editIngredientText"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="Edit Meal" />

    <EditText
        android:id="@+id/mealNameChanger"
        android:paddingTop="10dp"
        android:gravity="center|top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textStyle="bold"
        android:text="CURRENT MEAL NAME HERE"/>

    <EditText
        android:id="@+id/mealIngredientChanger"
        android:paddingTop="10dp"
        android:gravity="center|top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="CURRENT MEAL INGREDIENTS HERE"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/Starter"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/starter"/>

            <RadioButton
                android:id="@+id/Main"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/main" />

            <RadioButton
                android:id="@+id/Desert"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/dessert" />
        </RadioGroup>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/darker_gray"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:text="The ingredient(s) needs to be entered in the format: \n One:100g,Two:50ml"/>
    <Button
        android:id="@+id/editIngredient"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:text="Edit MEAL"/>
    <Button
        android:id="@+id/deleteIngredient"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_light"
        android:textColor="@android:color/white"
        android:text="Delete Meal" />
</LinearLayout>